# mcp-server-dash

./: .editorconfig  .env.example  .gitattributes  .gitignore  BUILD.md  Makefile  README.md  appxmanifest.xml  build.ps1  mcp-manifest.json  mcp-server-dash.spec  pyproject.toml
src/: auth_pkce.py  dash_api.py  mcp_server_dash.py  renderer.py  token_store.py
tests/: test_dash_api_http.py  test_dash_mcp_flow.py  test_models.py  test_renderer.py  test_token_store.py
tests/fixtures/: link_metadata_error.json  link_metadata_success.json  search_success.json
